Completed reading and writing of skipping lists and cache building